File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -87,7 +87,8 @@
     "popular" : "популярное",
     "getSupport" : "Поддержка",
     "comingSoon" : "Скоро",
-    "restart" : "Перезагрузка"
+    "restart" : "Перезагрузка",
+    "loadMore" : "Показать больше"
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -112,19 +113,9 @@
       "title" : "Кажется, Bluetooth отключён",
       "description" : "Пожалуйста, включите Bluetooth в настройках телефона. (статус {{state}})"
     },
-    "FwUpdateBluetoothNotSupported" : {
-      "title" : "Обновление прошивки поддерживается только для проводных соединений"
-    },
-    "BtcUnmatchedApp" : {
-      "title" : "Это не то приложение",
-      "description" : "Пожалуйста, откройте приложение {{managerAppName}} на устройстве."
-    },
     "CantOpenDevice" : {
       "title" : "Сбой подключения",
       "description" : "Устройство Ledger должно быть разблокировано, и находиться в радиусе действия Bluetooth."
-    },
-    "CantScanQRCode" : {
-      "title" : "Не удалось отсканировать QR-код: адрес не поддерживает автоматическую проверку."
     },
     "ConnectAppTimeout" : {
       "title" : "К сожалению, устройство не найдено",
@@ -324,11 +315,13 @@
     },
     "ImageCommitRefusedOnDevice" : {
       "title" : "Экран блокировки отключён на Ledger Stax",
-      "description" : "Если это изображение не подошло, вы можете попробовать другое."
+      "description" : "Если это изображение не подошло, вы можете попробовать другое.",
+      "primaryCTA" : "Загрузить другое изображение"
     },
     "ImageLoadRefusedOnDevice" : {
       "title" : "Экран блокировки отключён на Ledger Stax",
-      "description" : "Если это изображение не подошло, вы можете попробовать другое."
+      "description" : "Если это изображение не подошло, вы можете попробовать другое.",
+      "primaryCTA" : "Загрузить другое изображение"
     },
     "InvalidAddress" : {
       "title" : "Некорректный адрес {{currencyName}}"
@@ -414,8 +407,8 @@
       "title" : "Указанная макс. комиссия слишком мала. Подписание операции может занять длительное время"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Пожалуйста, проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счетов не обнаружено",
@@ -549,11 +542,12 @@
       "description" : "Транзакции необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 50 TRX."
+      "title" : "Не хватает баллов Энергии. Комиссия может достигать 50 TRX."
     },
     "UpdateYourApp" : {
       "title" : "Необходимо обновить приложения",
-      "description" : "Удалите и повторно установите приложение {{managerAppName}} через Диспетчер."
+      "description" : "Удалите и повторно установите приложение {{managerAppName}} через Диспетчер.",
+      "primaryCTA" : "Открыть «Мой Ledger»"
     },
     "UserRefusedAllowManager" : {
       "title" : "Диспетчер был отклонён на устройстве",
@@ -672,7 +666,8 @@
     },
     "generic" : {
       "title" : "{{message}}",
-      "description" : "Что-то пошло не так. Пожалуйста, попробуйте ещё раз. Если проблема не уходит, сохраните логи и отправьте их в Поддержку Ledger."
+      "description" : "Что-то пошло не так. Пожалуйста, попробуйте ещё раз. Если проблема не уходит, сохраните логи и отправьте их в Поддержку Ledger.",
+      "primaryCTA" : "Повторить"
     },
     "SolanaAccountNotFunded" : {
       "title" : "Счёт не пополнен"
@@ -811,6 +806,13 @@
       "title" : "Устройство заблокировано",
       "description" : "Разблокируйте устройство и повторите попытку.",
       "descriptionWithProductName" : "Разблокируйте {{ productName }} и повторите попытку."
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "crash" : {
@@ -1118,6 +1120,10 @@
         "title" : "Учитесь",
         "desc" : "Узнайте о криптовалюте, Web3, цифровой безопасности и многом другом"
       },
+      "news" : {
+        "title" : "Новости",
+        "desc" : "Узнайте больше о криптовалютах, безопасности, Web3, а также получайте актуальные новости"
+      },
       "ledgerApps" : {
         "title" : "Приложения",
         "desc" : "Познакомьтесь с интегрированными приложениями прямо внутри Ledger"
@@ -1263,7 +1269,7 @@
       "restoreDevice" : {
         "label" : "Восстановление устройства",
         "subTitle" : "Ввести фразу восстановления на новом устройстве",
-        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
       },
       "recovery" : "Есть фраза восстановления?",
       "protect" : {
@@ -1653,6 +1659,10 @@
             "label" : "Проверьте, обнаружено ли устройство Nano X."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Почему не подключается устройство Ledger?",
+        "description" : "После активации Bluetooth на устройстве Ledger иногда могут возникать проблемы подключения к мобильному приложению Ledger Live. Чтобы исправить это, воспользуйтесь кнопкой «Как это исправить?»."
       }
     },
     "stepImportAccounts" : {
@@ -1995,13 +2005,13 @@
       "desc" : "Просто отправьте криптоактивы получателю и дождитесь синхронизации приложения."
     },
     "carousel" : {
-      "title" : "То, что нужно"
+      "title" : "Специально для вас"
     },
     "recommended" : {
       "title" : "Рекомендуем"
     },
     "topGainers" : {
-      "title" : "Самые прибыльные (24Ч)",
+      "title" : "Прибыльные (24Ч)",
       "seeMarket" : "Просмотреть все"
     },
     "walletBalance" : "Баланс кошелька",
@@ -2070,7 +2080,7 @@
       "CREATE" : "Создано",
       "REVEAL" : "Раскрытие",
       "DELEGATE" : "Делегирование",
-      "UNDELEGATE" : "Отзыв",
+      "UNDELEGATE" : "Отозвано",
       "REDELEGATE" : "Переделегирование",
       "VOTE" : "Голосование",
       "FREEZE" : "Заморозка",
@@ -2188,11 +2198,11 @@
       "moreInfo" : "Подробнее...",
       "cardTitle" : "Powered by {{team}}",
       "drawer" : {
-        "title" : "Интеграция {{family}}",
-        "subTitle" : "Интеграция {{family}} выполнена командой {{team}}",
+        "title" : "Интеграция c {{family}}",
+        "subTitle" : "Интеграция c {{family}} выполнена командой {{team}}",
         "description" : "Ledger Live – это платформа с открытым исходным кодом.",
-        "description2" : "Разработчики из любой точки мира могут интегрироваться в наше приложение Ledger Live",
-        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger"
+        "description2" : "Разработчики из любой точки мира могут интегрировать своё приложение в Ledger Live.",
+        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger."
       }
     },
     "tokens" : {
@@ -2250,11 +2260,11 @@
       "advancedLogs" : "Расширенные логи",
       "accountName" : {
         "title" : "Название счёта",
-        "desc" : "Опишите счёт",
+        "desc" : "Введите описание для счёта.",
         "placeholder" : "Введите название"
       },
       "accountUnits" : {
-        "title" : "Ред. единицы учёта"
+        "title" : "Выбор единицы учёта"
       },
       "unit" : {
         "title" : "Единица учёта",
@@ -2345,7 +2355,7 @@
         "description" : "Вам нужно немного {{currencyTicker}}, чтобы {{actionName}} с помощью этого счёта."
       }
     },
-    "earn" : "Растите",
+    "earn" : "Приумножение",
     "quickActions" : "Быстрые действия",
     "banner" : {
       "redelegation" : {
@@ -2558,7 +2568,7 @@
         "goToSettings" : "Перейдите в настройки системы"
       },
       "allowed" : {
-        "title" : "Допуск уведомлений",
+        "title" : "Уведомления",
         "desc" : "Получайте уведомления о криптоактивах, ситуации на рынке и не только"
       },
       "transactions" : {
@@ -2585,7 +2595,7 @@
         "title" : "Уведомления о курсах",
         "desc" : "Настраивайте оповещения о курсах любимых криптовалют, чтобы не пропустить движения рынка"
       },
-      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся нашим партнёрам."
+      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся сторонним операторам услуг."
     },
     "help" : {
       "title" : "Помощь",
@@ -2600,12 +2610,12 @@
       "clearCacheModal" : "Вы уверены?",
       "clearCacheModalDesc" : "Мы проведём полное сканирование транзакций в сети. История счетов будет восстановлена, а средства на балансе будут пересчитаны.",
       "clearCacheButton" : "Очистить",
-      "exportLogs" : "Сохранение логов",
+      "exportLogs" : "Сохранить логи",
       "exportLogsDesc" : "Сохранённые логи Ledger Live могут потребоваться для устранения неполадок.",
       "resetThirdPartyData" : "Сброс данных посредников",
       "resetThirdPartyDataDesc" : "Удалите все данные посредников, использованные для доступа к сторонним поставщикам услуг.",
       "resetThirdPartyDataModal" : "Удаление данных посредников",
-      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или авторизоваться.",
+      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "hardReset" : "Сброс Ledger Live",
       "hardResetDesc" : "Это действие не затрагивает активы и позволяет удалить все данные в Ledger Live, включая данные счетов, историю транзакций и настройки. Используйте устройство Ledger для перезагрузки криптоактивов и управления ими в Ledger Live с исходными настройками.",
       "repairDevice" : "Ремонт устройства Ledger",
@@ -2736,7 +2746,7 @@
     },
     "receive" : {
       "title" : "Получить",
-      "description" : "Получайте криптовалюту из других кошельков.",
+      "description" : "Получайте криптовалюту с других кошельков.",
       "titleReadOnly" : "Не утверждённый адрес",
       "headerTitle" : "Криптоактив",
       "titleDevice" : "Добавление устройства",
@@ -2779,12 +2789,12 @@
       "receiveConfirmation" : {
         "title" : "Получить {{currencyTicker}}",
         "addressVerified" : "Адрес подтверждён",
-        "verifyAddress" : "Нажмите здесь для подтверждения адреса",
-        "adviceVerify" : "Мы рекомендуем подтверждать адрес с помощью устройства Ledger",
+        "verifyAddress" : "Нажмите сюда для подтверждения адреса",
+        "adviceVerify" : "Мы рекомендуем подтверждать адрес на устройстве Ledger",
         "sendWarning" : "Отправляйте на этот адрес исключительно {{currencyName}} ({{currencyTicker}}). Любые другие криптоактивы могут быть потеряны навсегда."
       },
       "securityVerify" : {
-        "title" : "Из соображений безопасности мы рекомендуем подтвердить этот адрес с помощью устройства Ledger.",
+        "title" : "Для безопасности мы рекомендуем подтвердить этот адрес на устройстве Ledger.",
         "subtitle1" : "Подтверждение адреса необходимо для безопасности криптоактивов. Помните, что адрес на экране устройства Ledger подделать невозможно.",
         "subtitle2" : "Подтверждение адреса позволяет убедиться, что адрес на экране вашего устройства Ledger совпадает с адресом, который отображается в Ledger Live.",
         "verifyCta" : "Подтвердить адрес",
@@ -2822,18 +2832,18 @@
     },
     "buy" : {
       "title" : "Покупка",
-      "description" : "Покупайте криптовалюту за наличные безопасно."
+      "description" : "Безопасно покупайте криптовалюту за фиат."
     },
     "sell" : {
       "title" : "Продажа",
-      "description" : "Продавайте криптовалюту за наличные безопасно."
+      "description" : "Безопасно продавайте криптовалюту за фиат."
     },
     "exchange" : {
       "title" : "Покупка/Продажа"
     },
     "swap" : {
       "title" : "Обмен",
-      "description" : "Обменивайте криптовалюты.",
+      "description" : "Обменивайте один криптоактив на другой.",
       "selectDevice" : "Выберите устройство",
       "broadcasting" : "Транслируем обменную операцию",
       "loadingFees" : "Загружаем комиссию сети...",
@@ -2849,7 +2859,7 @@
         "bannerCTA" : "Сбросить KYC"
       },
       "main" : {
-        "header" : "Обмен криптоактивов"
+        "header" : "Обмен"
       },
       "kyc" : {
         "disclaimer" : "Я даю согласие на передачу данных о моём местоположении третьим лицам в целях соблюдения комплаенса.",
@@ -3298,6 +3308,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Подключить кошелёк к децентрализованным приложениям"
     }
   },
   "signMessage" : {
@@ -3415,7 +3429,7 @@
     },
     "info" : {
       "maxSpendable" : {
-        "title" : "Сколько можно отправить",
+        "title" : "Вы можете отправить",
         "description" : "Максимальная расходуемая сумма — это баланс средств на счету, которые можно отправить."
       }
     }
@@ -3689,7 +3703,7 @@
       "title" : "Подключение по Bluetooth...",
       "label" : "Автоматически определять Nano"
     },
-    "deviceNotFoundPairNewDevice" : "Подключите посредством Bluetooth",
+    "deviceNotFoundPairNewDevice" : "Подключить по Bluetooth",
     "headerDescription" : "Обязательно разблокируйте {{productName}} и включите Bluetooth",
     "usb" : "...или USB-кабеля",
     "usbLabel" : "Подключите кабель и введите ПИН-код на устройстве",
@@ -3954,8 +3968,8 @@
       "default" : "По умолчанию",
       "name_asc" : "Название А-Я",
       "name_desc" : "Название Я-А",
-      "marketcap_desc" : "Рын. капитализация",
-      "marketcap" : "Рын. капитализация",
+      "marketcap_desc" : "Капитализация",
+      "marketcap" : "Капитализация",
       "name" : "Название"
     }
   },
@@ -4059,7 +4073,7 @@
     }
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "chooseLanguage" : "Выберите язык для {{deviceName}}.",
     "changeLanguage" : "Поменять язык",
@@ -5558,8 +5572,8 @@
       "selectAccount" : "Выберите счёт",
       "wantToBuy" : "Я покупаю",
       "connectDevice" : "Подключите устройство",
-      "title" : "Покупайте криптовалюту через партнёра",
-      "coinifyTitle" : "Покупайте криптовалюту через партнёра",
+      "title" : "Покупка криптовалюты через сторонних операторов",
+      "coinifyTitle" : "Покупка криптовалюты через сторонних операторов",
       "description" : "Приобретайте криптовалюты через Coinify и получайте их прямо на счёт в Ledger.",
       "CTAButton" : "Купить",
       "emptyState" : {
@@ -5586,7 +5600,7 @@
       "selectAccount" : "Выберите счёт",
       "wantToSell" : "Я продаю",
       "connectDevice" : "Подключите устройство",
-      "title" : "Продавайте криптовалюту через партнёра",
+      "title" : "Продажа криптовалюты через сторонних операторов",
       "description" : "Продавайте криптовалюту прямо со счёта в Ledger посредством Coinify и получайте фиатные деньги на банковский счёт.",
       "CTAButton" : "Продать",
       "emptyState" : {
@@ -5609,7 +5623,7 @@
     },
     "swap" : {
       "title" : "ОБМЕН КРИПТОВАЛЮТ",
-      "description" : "Обменивайте криптоактивы непосредственно на счетах в Ledger благодаря нашему партнёру."
+      "description" : "Обменивать криптоактивы можно непосредственно на счетах Ledger через сторонних операторов."
     }
   },
   "walletconnect" : {
@@ -5678,11 +5692,11 @@
       }
     },
     "status" : {
-      "title" : "Некоторые неполадки требуют вашего внимания",
-      "title_plural" : "Некоторые неполадки требуют вашего внимания",
+      "title" : "Обратите внимание",
+      "title_plural" : "Обратите внимание",
       "desc" : {
         "0" : "Они изучаются и скоро будут исправлены.",
-        "1" : "Если вы столкнулись с какой-либо неполадкой из указанных, свяжитесь с <0>Поддержкой Ledger</0>"
+        "1" : "Если вы столкнулись с чем-то из этого, свяжитесь с <0>Поддержкой Ledger</0>"
       },
       "cta" : {
         "ok" : "Понятно"
@@ -5748,13 +5762,13 @@
         "liveCompatible_label" : "Только с поддержкой Live"
       },
       "order" : {
-        "topGainers" : "Самые прибыльные",
+        "topGainers" : "Прибыльные",
         "market_cap" : "Рейтинг",
         "market_cap_asc" : "Капитализация возр.",
         "market_cap_desc" : "Капитализация убыв."
       },
       "currency" : "Валюта",
-      "time" : "Время",
+      "time" : "Период",
       "apply" : "Применить"
     },
     "marketList" : {
@@ -6077,5 +6091,10 @@
         "emptyPassword" : "Поле с паролем не может быть пустым"
       }
     }
+  },
+  "newsfeed" : {
+    "title" : "Новостная рассылка",
+    "poweredByCryptopanic" : "Разработано Cryptopanic",
+    "noPosts" : "Пока здесь ничего нет"
   }
 }
