--- a/apps/ledger-live-mobile/src/locales/ko/common.json
+++ b/apps/ledger-live-mobile/src/locales/ko/common.json
@@ -87,7 +87,8 @@
     "popular" : "인기 있는",
     "getSupport" : "지원 받기",
     "comingSoon" : "곧 출시 예정",
-    "restart" : "재시작"
+    "restart" : "재시작",
+    "loadMore" : "더 보기"
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -112,19 +113,9 @@
       "title" : "죄송하지만 블루투스가 비활성 상태입니다",
       "description" : "휴대폰 설정에서 블루투스를 활성화해주세요. ({{state}} 주)"
     },
-    "FwUpdateBluetoothNotSupported" : {
-      "title" : "펌웨어 업데이트는 유선 연결로만 지원됩니다."
-    },
-    "BtcUnmatchedApp" : {
-      "title" : "올바르지 않은 앱입니다",
-      "description" : "귀하의 장치에서 {{managerAppName}} 앱을 열어주세요."
-    },
     "CantOpenDevice" : {
       "title" : "죄송하지만, 연결에 실패했습니다",
       "description" : "귀하의 Ledger 장치가 반드시 잠금 해제 상태로 블루투스 사용 가능 범위 내에 있어야 합니다."
-    },
-    "CantScanQRCode" : {
-      "title" : "이 QR 코드를 스캔할 수 없습니다. 자동 인증을 지원하지 않는 주소입니다."
     },
     "ConnectAppTimeout" : {
       "title" : "죄송하지만 발견된 장치가 없습니다.",
@@ -324,11 +315,13 @@
     },
     "ImageCommitRefusedOnDevice" : {
       "title" : "Ledger Stax에서 잠금 화면이 취소되었습니다.",
-      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다."
+      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다.",
+      "primaryCTA" : "다른 사진을 업로드하세요"
     },
     "ImageLoadRefusedOnDevice" : {
       "title" : "Ledger Stax에서 잠금 화면이 취소되었습니다.",
-      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다."
+      "description" : "적합한 이미지가 아니라면 다른 이미지로 다시 시도해볼 수 있습니다.",
+      "primaryCTA" : "다른 사진을 업로드하세요"
     },
     "InvalidAddress" : {
       "title" : "유효한 {{currencyName}} 주소가 아닙니다"
@@ -549,11 +542,12 @@
       "description" : "트랜잭션은 30초 이내에 서명을 완료해야 합니다. 다시 시도해 주세요."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 30TRX를 지불할 수 있습니다."
+      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 50 TRX를 지불할 수 있습니다."
     },
     "UpdateYourApp" : {
       "title" : "앱 업데이트 필요",
-      "description" : "관리자에서 {{managerAppName}} 앱을 삭제하고 재설치하세요."
+      "description" : "관리자에서 {{managerAppName}} 앱을 삭제하고 재설치하세요.",
+      "primaryCTA" : "관리자 열기"
     },
     "UserRefusedAllowManager" : {
       "title" : "관리자가 장치에서 비활성 상태입니다",
@@ -672,7 +666,8 @@
     },
     "generic" : {
       "title" : "{{message}}",
-      "description" : "문제가 발생했습니다. 다시 시도해주세요. 문제가 지속될 경우, 아래 버튼을 이용해 로그를 저장하고 Ledger 지원 부서로 보내주세요."
+      "description" : "문제가 발생했습니다. 다시 시도해주세요. 문제가 지속될 경우, 아래 버튼을 이용해 로그를 저장하고 Ledger 지원 부서로 보내주세요.",
+      "primaryCTA" : "다시 시도"
     },
     "SolanaAccountNotFunded" : {
       "title" : "자금이 입금되지 않은 계정"
@@ -811,6 +806,13 @@
       "title" : "장치가 잠금 상태입니다",
       "description" : "장치의 잠금을 해제하고 다시 시도하세요.",
       "descriptionWithProductName" : "{{ productName }}의 잠금을 해제하고 다시 시도하세요."
+    },
+    "EtherscanAPIError" : {
+      "title" : "트랜잭션을 가져오지 못했습니다",
+      "description" : "탐색기에서 예상하지 못한 오류가 발생했습니다. 나중에 다시 시도해 주세요"
+    },
+    "GasEstimationError" : {
+      "title" : "가스비를 추정하지 못했습니다"
     }
   },
   "crash" : {
@@ -1117,6 +1119,10 @@
       "learn" : {
         "title" : "알아보기",
         "desc" : "암호화폐, Web3, 디지털 보안 등에 대해 알아보세요"
+      },
+      "news" : {
+        "title" : "뉴스",
+        "desc" : "암호화, 보안, web3에 대해 알아보고 최신 뉴스를 확인하세요"
       },
       "ledgerApps" : {
         "title" : "앱",
@@ -1653,6 +1659,10 @@
             "label" : "Nano X가 감지되는지 확인하세요."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Ledger를 연결할 수 없는 이유가 무엇인가요?",
+        "description" : "Ledger에서 블루투스를 활성화한 후에 Ledger Live 모바일과 연결 문제가 발생한 경우 아래의 \"해결 방법 알아보기\" 버튼을 눌러서 안내에 따라 문제를 해결할 수 있습니다."
       }
     },
     "stepImportAccounts" : {
@@ -3298,6 +3308,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "지갑을 디앱에 연결합니다"
     }
   },
   "signMessage" : {
@@ -6077,5 +6091,10 @@
         "emptyPassword" : "패스워드는 비워둘 수 없습니다"
       }
     }
+  },
+  "newsfeed" : {
+    "title" : "뉴스피드",
+    "poweredByCryptopanic" : "Cryptopanic 제공",
+    "noPosts" : "현재 이용 가능한 게시물이 없습니다"
   }
 }
